# CppFrogger

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Readme.md  r
fonts/: dummy_font_license.txt
include/: Crocodile.hpp  Game.hpp  GameEntity.hpp  Log.hpp  Player.hpp  Vehicle.hpp
src/: Crocodile.cpp  Game.cpp  GameEntity.cpp  Log.cpp  Player.cpp  Vehicle.cpp  main.cpp
